<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_home_button"
        android:title="@string/home_title" />
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        android:icon="@drawable/selector_notifications_button"
        android:title="@string/notifications_title" />
    <item
        android:id="@+id/appointmentsListFragment"
        android:enabled="true"
        android:icon="@drawable/selector_list_button"
        android:title="@string/list_title" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/selector_profile_button"
        android:title="@string/profile_title" />
</menu>