<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainApp.AppointmentsListFragment">

    <TextView
        android:id="@+id/textViewListaPrenotazioni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="20dp"
        android:text="@string/tutorings_list"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton">

        <TextView
            android:id="@+id/no_appointments_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/no_appointments"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/appointments_list_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appointments_list_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/textViewListaPrenotazioni" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:backgroundTint="@color/background_color"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/textViewListaPrenotazioni"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        android:padding="0dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/background_color"
            app:tabIndicator="@drawable/tab_selector"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabIndicatorAnimationMode="linear"
            app:tabMode="fixed"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@android:color/black"
            app:tabIconTint="@color/tab_icon_selector"
            android:layout_margin="0dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/sent_appointments_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/arrow_up_svgrepo_com"
                android:text="@string/sent" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/recv_appointments_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/down_arrow_svgrepo_com"
                android:text="@string/received" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/closed_appointments_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/review_checkmark_svgrepo_com"
                android:text="@string/closed" />

        </com.google.android.material.tabs.TabLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>